// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match disabled snapshot 1`] = `
<button
  aria-disabled="true"
  class="sc-gsTCUz jwbJMO"
  type="button"
>
  Continue
</button>
`;

exports[`Button should match snapshot 1`] = `
<button
  class="sc-gsTCUz hRhGqn"
  type="button"
>
  Continue
</button>
`;
